--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Верстай звёздный рейтинг тут -->
+    <div class="stars">
+      <span class="star">★</span>
+      <span class="star">★</span>
+      <span class="star">★</span>
+      <span class="star">★</span>
+      <span class="star">★</span>
+    </div>
   </body>
 </html>
